--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="rishabhyadav@iiitdmj.ac.in">Email:- rishabhyadav@iiitdmj.ac.in</a>
                     <h4 class="mb-4"></h4>
 
-                    <p class="lead mb-5">I am a Robotics Student, working on Control and Planning of Co-operative Multi Robot System for the payload Transportation System. My long term search goal is to study Applied Control System and Robotics.</p>
+                    <p class="lead mb-5">I am a Robotics Student, working on Control and Planning of Co-operative Multi Robot System for the Payload Transportation System. My long term search goal is to study Applied Control System and Robotics.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/rishabhdevyadav/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/rishabhdevyadav"><i class="fab fa-github"></i></a>
@@ -75,16 +75,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">PDPM Indian Institute of Information Technology D&M, Jabalpur</h3>
                             <div class="subheading mb-3">Bachelor of Technology</div>
-                            <div>Department of MEchanical Engineering</div>
-                            <p>CGPA: 7.6/10</p>
+                            <div>Department of Mechanical Engineering</div>
+                            <p>CGPA: 7.6 / 10</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2015 - May 2015</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2015 - May 2019</span></div>
                     </div>
 
                 </div>
             </section>
             <hr class="m-0" />
-
 
 
             <!-- Experience-->
@@ -105,9 +104,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Associate</h3>
                             <div class="subheading mb-3">International Institute of Information Technology, Hyderabad.</div>
-                            <p>Design and Development of ROS based custom built skid-steer payload carrying robot. Control and Planning of co-operative Multi-Robot Payload Transportation System. </p>
+                            <p>Design and Development of ROS based custom built skid-steer robot for inside indoor environmnet. Control and Planning of co-operative Multi-Robot Payload Transportation System. </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - March 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2019 - March 2020</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -146,7 +145,7 @@
                              Yadav, Shrey Agarwal, Kamalakar Karlapalem, ICRA 2020 Workshop: Multi-Robot.
                              <a href="https://github.com/rishabhdevyadav/Multi_Robot_Payload_Transportation">See: GitHub</a>
                             <div> </div>
-                            <a href="https://drive.google.com/file/u/2/d/1mQ1jb5qbBhsWx6KdR_kdYt2A0MlatHNR/view?usp=sharing">Gazebo Simulation Video</a>
+                            <a href="https://drive.google.com/file/u/2/d/1mQ1jb5qbBhsWx6KdR_kdYt2A0MlatHNR/view?usp=sharing">See: Gazebo Simulation Video</a>
                         </li>
 
                     </ul>
@@ -154,7 +153,6 @@
                 </div>
             </section>
             <hr class="m-0" />
-
 
 
             <!-- Projects-->
@@ -272,6 +270,8 @@
             <section class="resume-section" id="activities">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Other Activities</h2>
+
+                    <div class="subheading mb-3"> Asia-Pacific Robot Competition Participation</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -285,6 +285,11 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             ROBOCON 2017: Semi-Autonomous Disc Throwing Robot
                         </li>
+                    </ul>
+                    <hr class="mb-3" />
+
+                    <div class="subheading mb-3">Volunteer Experience</div>
+                    <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             IIITDM Jabalpur Counseling Coordinator (July 2018 - April 2019)
