--- a/index.html
+++ b/index.html
@@ -183,7 +183,15 @@
                                 errors between them, moves virtual structure
                                 according to a local or global trajectory generator
                                 and updates the robot positions to follow the
-                                desired virtual structure trajectories. .</p>
+                                desired virtual structure trajectories.</p>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <div class="subheading mb-3">Chained Formation Control for Multi-Robot system</div>
+                            <a href="https://github.com/rishabhdevyadav/Multi-Robot-Formation-Control/blob/master/chain_formation.gif">See: GitHub & Simulation Video</a>
+                            <p>A proportional controller is designed for multiple robots moving in queque maintaining a fix distance between them while moving on single track. Every robot need information of its own position and its it adjacent agent only. Whenever distance betwwen two robot will increase or decreased than the desired one, robots speeds will change accordingly. </p>
                         </div>
                     </div>
 
