--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="rishabhyadav@iiitdmj.ac.in">Email:- rishabhyadav@iiitdmj.ac.in</a>
                     <h4 class="mb-4"></h4>
 
-                    <p class="lead mb-5">I am a Robotics Student, working on Control and Planning of Co-operative Multi Robot System for the Payload Transportation System. My long term search goal is to study Applied Control System and Robotics.</p>
+                    <p class="lead mb-5">I am a Robotics Student, working on Control and Planning of Co-operative Multi Robot System for the Payload Transportation System. My long term research goal is to study Applied Control System and Robotics.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/rishabhdevyadav/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/rishabhdevyadav"><i class="fab fa-github"></i></a>
