--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         <a class="social-icon" href="https://github.com/rishabhdevyadav"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://medium.com/@rishabhdevyadav"><i class="fab fa-medium"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/rishabh.d.yadav"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/_rishabh_dev_/"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </section>
