--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Rishabh Dev Personal Webapge</title>
+        <title>Rishabh Dev Yadav</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -15,12 +15,13 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Rishabh Dev</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/rprofile.jpg" alt="" /></span>
+                <span class="d-block d-lg-none">Rishabh Dev Yadav</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-4" src="assets/img/rprofile.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -36,6 +37,7 @@
                 </ul>
             </div>
         </nav>
+
         <!-- Page Content-->
         <div class="container-fluid p-0">
 
@@ -92,6 +94,17 @@
                 <div class="resume-section-content">
                     <h2 class="mb-4">Research Experience</h2>
 
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Research Associate</h3>
+                            <div class="subheading mb-3">International Institute of Information Technology, Hyderabad.</div>
+                            <p>Efficiency of Co-operative Multi-Robot Formation Control System for Trajectory Tracking. </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
+                    </div>
+
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Internship</h3>
@@ -100,6 +113,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2020 - June 2020</span></div>
                     </div>
+
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -213,7 +227,6 @@
                         </div>
                     </div>
 
-
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <div class="subheading mb-3">Arduino code for waypoint tracking using GPS and Magnetometer. </div>
@@ -221,6 +234,16 @@
                             <p>Pre-defined Latitude and Longitude is tracked using GPS and Magnetometer, while avoiding the obstacles between the waypoints. GPS Data is used to find "Target Heading" and Magnetometer Placed on robot give us "Current Heading" of robot. And difference beteern "Target and Current Heading" will decide angular velocity of robot.</p>
                         </div>
                     </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <div class="subheading mb-3">Design Project:- Enhancement Of Roadside Signboard using Wireless System.</div>
+                            <a href="https://github.com/rishabhdevyadav/Sign-O-Lecture">See: GitHub & Simulation Video</a>
+                            <p>A proposed idea for the road safety by using a wireless frequency based traffic sign
+                            recognition system to reduce the traffic and accidents. A transmitter will be placed on each sign-boards and a receiver is placed inside vehicle with a screen and speaker to give audio and visual notification to driver, whenever a signboard is detected.</p>
+                        </div>
+                    </div>
+
 
                 </div>
             </section>
