edited text color size

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style type="text/css">
+            p{color: rgba(0,0,0, 0.8);font-size:110%}
+        </style>
+
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -53,8 +57,8 @@
                     <h4 class="mb-3">Robotics Research Student,</h4>
                     <h4 class="mb-3">AARG Lab, International Institute of Information Technology, Hyderabad.</h4>
 
-                    <a href="rishabhyadav@iiitdmj.ac.in">Email:- rishabhyadav@iiitdmj.ac.in</a>
-                    <h4 class="mb-4"></h4>
+                    <p><a href="rishabhyadav@iiitdmj.ac.in">Email:- rishabhyadav@iiitdmj.ac.in</a></p>
+                    <h4 class="mb-5"></h4>
 
                     <p class="lead mb-5">I am a Robotics Student, working on Control and Planning of Co-operative Multi Robot System for the Payload Transportation System. My long term research goal is to study Applied Control System and Robotics.</p>
                     <div class="social-icons">
@@ -76,9 +80,10 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">PDPM Indian Institute of Information Technology D&M, Jabalpur</h3>
-                            <div class="subheading mb-3">Bachelor of Technology</div>
-                            <div>Department of Mechanical Engineering</div>
+                            <h3 class="mb-2">PDPM Indian Institute of Information Technology D&M, Jabalpur</h3>
+                            <div class="subheading mb-2">Bachelor of Technology </div>
+                            <!-- <div>Department of Mechanical Engineering</div> -->
+                            <div> <p>Department of Mechanical Engineering </p> </div>
                             <p>CGPA: 7.6 / 10</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2015 - May 2019</span></div>
@@ -98,7 +103,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Associate</h3>
-                            <div class="subheading mb-3">International Institute of Information Technology, Hyderabad.</div>
+                            <div class="subheading mb-1">International Institute of Information Technology, Hyderabad.</div>
                             <p>Efficiency of Co-operative Multi-Robot Formation Control System for Trajectory Tracking. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
@@ -108,7 +113,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Internship</h3>
-                            <div class="subheading mb-3">Indian Institute of Technology, Kanpur.</div>
+                            <div class="subheading mb-1">Indian Institute of Technology, Kanpur.</div>
                             <p>Literature review and simulation of attitude estimation technique of high-speed projectile using IMU and GPS. Interfacing Pixhawk and Arduino board using Mavlink library for Pixhawk board sensor data extraction.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2020 - June 2020</span></div>
@@ -118,7 +123,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Associate</h3>
-                            <div class="subheading mb-3">International Institute of Information Technology, Hyderabad.</div>
+                            <div class="subheading mb-1">International Institute of Information Technology, Hyderabad.</div>
                             <p>Design and Development of ROS based custom built skid-steer robot for inside indoor environmnet. Control and Planning of co-operative Multi-Robot Payload Transportation System. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2019 - March 2020</span></div>
@@ -127,7 +132,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Project Based Internship</h3>
-                            <div class="subheading mb-3">Indian Institute of Information Technology, Jabalpur.</div>
+                            <div class="subheading mb-1">Indian Institute of Information Technology, Jabalpur.</div>
                             <p> Predefined waypoint tracking for Six-Wheeled Multi Terrain Robot in outdoor environment using GPS and Inertial Measurment Unit. Also, involved implemenation of Sensor fusion algorithm for attitude estimation and obstacle avoidance using ultrasonic sensor.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2018 - November 2018</span></div>
@@ -136,7 +141,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Internship</h3>
-                            <div class="subheading mb-3">Indian Institute of Information Technology, Allahabad.</div>
+                            <div class="subheading mb-1">Indian Institute of Information Technology, Allahabad.</div>
                             <p>Kinematic Modelling of Holonomic Robot and Trajectory Tracking simulation in MATLAB using PID controller.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2017 - July 2017</span></div>
@@ -151,16 +156,17 @@
             <section class="resume-section" id="publications">
                 <div class="resume-section-content">
                     <h2 class="mb-4">Publications</h2>
-                    <div class="subheading mb-3">Conference Papers</div>
+                    <div class="subheading mb-1">Conference Papers</div>
 
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            “Maintaining the Level of a Payload carried by Multi-Robot System on Irregular Surface”, Rishabh Dev
+                            <p>“Maintaining the Level of a Payload carried by Multi-Robot System on Irregular Surface”, Rishabh Dev
                              Yadav, Shrey Agarwal, Kamalakar Karlapalem, ICRA 2020 Workshop: Multi-Robot.
                              <a href="https://github.com/rishabhdevyadav/Multi_Robot_Payload_Transportation">See: GitHub</a>
+                             </p>
                             <div> </div>
-                            <a href="https://drive.google.com/file/u/2/d/1mQ1jb5qbBhsWx6KdR_kdYt2A0MlatHNR/view?usp=sharing">See: Gazebo Simulation Video</a>
+                            <p><a href="https://drive.google.com/file/u/2/d/1mQ1jb5qbBhsWx6KdR_kdYt2A0MlatHNR/view?usp=sharing">See: Gazebo Simulation Video</a></p>
                         </li>
 
                     </ul>
@@ -177,8 +183,8 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3">Linearized Model Prdective Control for Uncyclic Robot Trajectory Tracking</div>
-                            <a href="https://github.com/rishabhdevyadav/MPC-Trajectory-Tracking">See: GitHub & Simulation Video</a>
+                            <div class="subheading mb-2">Linearized Model Prdective Control for Uncyclic Robot Trajectory Tracking</div>
+                            <p><a href="https://github.com/rishabhdevyadav/MPC-Trajectory-Tracking">See: GitHub & Simulation Video</a></p>
 
                             <p>Linear Model Predictive Control of differential drive is used for cubic spline trajectory tracking. A simulation is shown in python using cvxpy optimization tool.</p>
                         </div>
@@ -186,8 +192,8 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3">Virtual Structure Approach for Multi-Robot Formation Control</div>
-                            <a href="https://github.com/rishabhdevyadav/Multi-Robot-Formation-Control">See: GitHub & Simulation Video</a>
+                            <div class="subheading mb-2">Virtual Structure Approach for Multi-Robot Formation Control</div>
+                            <p><a href="https://github.com/rishabhdevyadav/Multi-Robot-Formation-Control">See: GitHub & Simulation Video</a></p>
                             <p>Virtual structures consider the entire formation
                                 as a rigid body. The control law for a single robot is
                                 derived by defining the dynamics of the virtual
@@ -204,16 +210,16 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3">Chained Formation Control for Multi-Robot system</div>
-                            <a href="https://github.com/rishabhdevyadav/Multi-Robot-Formation-Control/blob/master/chain_formation.gif">See: GitHub & Simulation Video</a>
+                            <div class="subheading mb-2">Chained Formation Control for Multi-Robot system</div>
+                            <p><a href="https://github.com/rishabhdevyadav/Multi-Robot-Formation-Control/blob/master/chain_formation.gif">See: GitHub & Simulation Video</a></p>
                             <p>A proportional controller is designed for multiple robots moving in queque maintaining a fix distance between them while moving on single track. Every robot need information of its own position and its it adjacent agent only. Whenever distance betwwen two robot will increase or decreased than the desired one, robots speeds will change accordingly. </p>
                         </div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3">ROS code for IMU (MPU9250) sensor fusion and filter using Raspberry Pi. </div>
-                            <a href="https://github.com/rishabhdevyadav/ROS_IMU_Filter">See: GitHub & Simulation Video</a>
+                            <div class="subheading mb-2">ROS code for IMU (MPU9250) sensor fusion and filter using Raspberry Pi. </div>
+                            <p><a href="https://github.com/rishabhdevyadav/ROS_IMU_Filter">See: GitHub & Simulation Video</a></p>
                             <p>Raw data of MPU9250 IMU is read using Rapberry Pi and then ROS imu_complementary_filter Package is used for sensor fusion and attitude estimation.</p>
                         </div>
                     </div>
@@ -221,24 +227,24 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3">Skid-Steer ROS based custom robot for indoor environment.</div>
-                            <a href="https://github.com/rishabhdevyadav/ROS_Skid_Steer_Custom_Robot">See: GitHub & Simulation Video</a>
+                            <div class="subheading mb-2">Skid-Steer ROS based custom robot for indoor environment.</div>
+                            <p><a href="https://github.com/rishabhdevyadav/ROS_Skid_Steer_Custom_Robot">See: GitHub & Simulation Video</a></p>
                             <p>Custom build robot is design and manufactured. Arduino Mega has been used as lower level control for PID speed control and to read raw sensor data and to execute commands to actuators. Raspberry Pi  used as middle level control to read IMU data and solve kinematics of robots. At top level Laptop is used for complex packages like robot_localization, imu_complementary_filter, OMPL (The Open Motion Planner Library). For indoor localization camera mounted on ceiling and Dewave Modules with Arduino Pro Mini is used. </p>
                         </div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3">Arduino code for waypoint tracking using GPS and Magnetometer. </div>
-                            <a href="https://github.com/rishabhdevyadav/GPS_Magnetometer_Trajectory_Tracking">See: GitHub & Simulation Video</a>
+                            <div class="subheading mb-2">Arduino code for waypoint tracking using GPS and Magnetometer. </div>
+                            <p><a href="https://github.com/rishabhdevyadav/GPS_Magnetometer_Trajectory_Tracking">See: GitHub & Simulation Video</a></p>
                             <p>Pre-defined Latitude and Longitude is tracked using GPS and Magnetometer, while avoiding the obstacles between the waypoints. GPS Data is used to find "Target Heading" and Magnetometer Placed on robot give us "Current Heading" of robot. And difference beteern "Target and Current Heading" will decide angular velocity of robot.</p>
                         </div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3">Design Project:- Enhancement Of Roadside Signboard using Wireless System.</div>
-                            <a href="https://github.com/rishabhdevyadav/Sign-O-Lecture">See: GitHub & Simulation Video</a>
+                            <div class="subheading mb-2">Design Project:- Enhancement Of Roadside Signboard using Wireless System.</div>
+                            <p><a href="https://github.com/rishabhdevyadav/Sign-O-Lecture">See: GitHub & Simulation Video</a></p>
                             <p>A proposed idea for the road safety by using a wireless frequency based traffic sign
                             recognition system to reduce the traffic and accidents. A transmitter will be placed on each sign-boards and a receiver is placed inside vehicle with a screen and speaker to give audio and visual notification to driver, whenever a signboard is detected.</p>
                         </div>
@@ -260,15 +266,15 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            C
+                            <p> C </p>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Python
+                            <p> Python </p>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            MATLAB
+                            <p> MATLAB </p>
                         </li>
                     </ul>
                     <hr class="mb-3" />
@@ -277,19 +283,19 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Robot Operating System
+                            <p> Robot Operating System </p>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Gazebo
+                            <p> Gazebo </p>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Ubuntu
+                            <p> Ubuntu </p>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Solidworks
+                            <p> Solidworks </p>
                         </li>
                     </ul>
                 </div>
@@ -307,15 +313,15 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            ROBOCON 2019: Autonomous Quadruped Legged Robot
+                            <p> ROBOCON 2019: Autonomous Quadruped Legged Robot </p>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            ROBOCON 2018: Autonomous ShuttleCock Throwing Robot
+                            <p> ROBOCON 2018: Autonomous ShuttleCock Throwing Robot </p>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            ROBOCON 2017: Semi-Autonomous Disc Throwing Robot
+                            <p> ROBOCON 2017: Semi-Autonomous Disc Throwing Robot </p>
                         </li>
                     </ul>
                     <hr class="mb-3" />
@@ -324,7 +330,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            IIITDM Jabalpur Counseling Coordinator (July 2018 - April 2019)
+                            <p> IIITDM Jabalpur Counseling Coordinator (July 2018 - April 2019) </p>
                         </li>
                     </ul>
                 </div>
