--- a/index.html
+++ b/index.html
@@ -161,42 +161,8 @@
                 <div class="resume-section-content">
                     <h2 class="mb-4">Publications</h2>
                     <div class="subheading mb-1">Conference Papers</div>
-
- <!--                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <p>“Maintaining the Level of a Payload carried by Multi-Robot System on Irregular Surface”, Rishabh Dev
-                             Yadav, Shrey Agarwal, Kamalakar Karlapalem, ICRA 2020 Workshop: Multi-Robot.
-                             <a href="https://github.com/rishabhdevyadav/Multi_Robot_Payload_Transportation">See: GitHub</a>
-                             </p>
-                            <div> </div>
-                            <p><a href="https://drive.google.com/file/u/2/d/1mQ1jb5qbBhsWx6KdR_kdYt2A0MlatHNR/view?usp=sharing">See: Gazebo Simulation Video</a></p>
-                        </li>
-
-                    </ul> -->
-
-<!-- Paper 1 -->
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                        <p style="font-weight: bold;">1. “Maintaining the Level of a Payload carried by Multi-Robot System on Irregular Surface”, Rishabh Dev Yadav, Shrey Agarwal, Kamalakar Karlapalem, ICRA 2020 Workshop: Multi-Robot.
-                        <main class='main'>
-                        <section class='left section'>
-                        <p>  In this paper, we introduce a multi robot payload
-                            transport system to carry payloads through an environment
-                            of unknown and uneven inclinations while maintaining the
-                            desired orientation of the payload. For this task, we used custom
-                            built robots with a linear actuator (pistons mounted on top of
-                            each robot. The system continuously monitors the payload’s
-                            orientation and computes the required piston height of each
-                            robot to maintain the desired orientation of the payload.</p>
-                        </section>
-                        <section class='right section'>
-                        <iframe volume="0" width="450" height="250" src="https://www.youtube.com/embed/mw2Bc3rAbrg" allowfullscreen></iframe>
-                        </section>
-                        </main>
-                        </div>
-                    </div>
-                    <hr class="mb-3" />
+                        
+                    <p style="font-weight: bold;">1. “Maintaining the Level of a Payload carried by Multi-Robot System on Irregular Surface”, Rishabh Dev Yadav, Shrey Agarwal, Kamalakar Karlapalem, ICRA 2020 Workshop: Multi-Robot.
 
                     <p style="font-weight: bold;">2. “Efficient Manoeuvring of Quadrotor under Constrained Space and Predefined Accuracy”, Sourish Ganguly, Viswa Narayanan Sankaranarayanan, Rishabh Dev Yadav, Suraj Bonagiri Venkata Sai Gopala, Spandan Roy, IROS 2021.
 
@@ -227,7 +193,7 @@
                     </div>
                     <hr class="mb-3" />
 
-<!-- Poject 1 -->
+<!-- Poject 2 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                         <div class="subheading mb-2">Fast Planner with Octomapping Obstacle Avoidance for Drones</div>
@@ -244,7 +210,7 @@
                     </div>
                     <hr class="mb-3" />
 
-<!-- Poject 2 -->
+<!-- Poject 3 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                         <div class="subheading mb-2">Ewok: Real-Time Trajectory Replanning for MAVs using Uniform B-splines and 3D Circular Buffer</div>
@@ -261,7 +227,7 @@
                     </div>
                     <hr class="mb-3" />
 
-<!-- Poject 3 -->
+<!-- Poject 4 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                         <div class="subheading mb-2">Autonomous Safe Landing of Quadcopters</div>
@@ -278,7 +244,24 @@
                     </div>
                     <hr class="mb-3" />
 
-<!-- Poject 4 -->
+<!-- Poject 5 -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                        <div class="subheading mb-2">Coordinated motion of UGV and a UAV while carrying a payload</div>
+                        <main class='main'>
+                        <section class='left section'>
+                        <p>Coordinated motion of heterogeneous robot groups are more appealing due to the fact that unique advantages of different robots might be combined to increase the overall efficiency of the system. A Unmanned Ground Vehicles (UGVs) is tracking a predefined path and an Unmanned Aerial Vehicle (UAV) is following the UGV. A delivery exchange has been demonstrated to compare the performance with and without payload.</p>
+                        </section>
+                        <section class='right section'>
+
+                        <iframe volume="0" width="450" height="250" src="https://www.youtube.com/embed/q_XwVnDb8_I" allowfullscreen></iframe>
+                        </section>
+                        </main>
+                        </div>
+                    </div>
+                    <hr class="mb-3" />
+
+<!-- Poject 6 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                         <div class="subheading mb-2">Model Predictive Control for Multi-Robot Trajectory Tracking</div>
@@ -297,7 +280,33 @@
                     <hr class="mb-3" />
 
 
-<!-- Poject 5 -->
+<!-- Poject 7 -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                        <div class="subheading mb-2">Co-operative multi-robot payload carrying system on uneven surface</div>
+                        <main class='main'>
+                        <section class='left section'>
+                        <p>a multi robot payload
+                            transport system to carry payloads through an environment
+                            of unknown and uneven inclinations while maintaining the
+                            desired orientation of the payload. For this task, we used custom
+                            built robots with a linear actuator (pistons mounted on top of
+                            each robot. The system continuously monitors the payload’s
+                            orientation and computes the required piston height of each
+                            robot to maintain the desired orientation of the payload.</p>
+                        </section>
+                        <section class='right section'>
+    
+
+                        <iframe volume="0" width="450" height="250" src="https://www.youtube.com/embed/mw2Bc3rAbrg" allowfullscreen></iframe>
+                        </section>
+                        </main>
+                        </div>
+                    </div>
+                    <hr class="mb-3" />
+
+
+<!-- Poject 8 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                         <div class="subheading mb-2">Formation Control using PID and Virtual Structure</div>
@@ -328,7 +337,7 @@
                     <hr class="mb-3" /> -->
 
 
-<!-- Poject 7 -->
+<!-- Poject 9 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                         <div class="subheading mb-2">Arduino based waypoint tracking using GPS and Magnetometer.</div>
